Fixed help menu showing up behind image

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,13 +12,14 @@
   top: 50%;
   transform: translate(-50%, -50%);
   width: 320px;
+  z-index: 1;
 }
 
 .loaded-image {
 	align-self: center;
 	display: inline-flex;
 	flex-direction: column;
-	height: 100vh;
+	height: 100%;
 	justify-content: center;
 }
 
